--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-icons/all-files": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.24.2",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
