--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-icons/all-files": "^4.1.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.24.2",
     "lucide-react": "^0.437.0",
+    "mysql2": "^3.11.3",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
