--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18.3.5",
