--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.24.2",
+    "drizzle-orm": "^0.33.0",
     "lucide-react": "^0.437.0",
     "mysql2": "^3.11.3",
     "next": "14.2.7",
