--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-icons/all-files": "^4.1.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.24.2",
     "drizzle-orm": "^0.33.0",
