--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/auth/[...nextauth]/route.js", "drizzle.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts","**/*.js", "**/*.tsx", ".next/types/**/*.ts", "app/api/auth/[...nextauth]/route.js", "drizzle.config.js"],
   "exclude": ["node_modules"]
 }
