--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
     "@next/env": "^14.2.12",
