--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^3.11.3",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
+    "next-intl": "^3.19.3",
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
