Added email service

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "next-intl": "^3.19.4",
+    "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "react": "^18",
     "react-dom": "^18",
@@ -54,6 +55,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.24.2",
