--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
