--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.33.0",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.437.0",
     "mysql2": "^3.11.3",
     "next": "14.2.7",
