--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-intl": "^3.19.4",
     "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-calendly": "^4.3.1",
     "react-dom": "^18",
